--- a/SITE/_quarto.yml
+++ b/SITE/_quarto.yml
@@ -33,27 +33,27 @@ website:
         menu:
           - text: "📚 CURSOS"
             href: "#"
-          - text: "Curso A"
+          - text: "- Curso A"
             href: "#"
-          - text: "Curso B"
+          - text: "- Curso B"
             href: "#"
-          - text: "Curso C"
+          - text: "- Curso C"
             href: "#"
-          - text: "Curso D"
+          - text: "- Curso D"
             href: "#"
           - text: "💻 PACOTES"
             href: "#"
-          - text: "R"
+          - text: "- R"
             href: "#"
-          - text: "Python"
+          - text: "- Python"
             href: "#"
           - text: "⚒️ UTILITÁRIOS"
             href: "#"
-          - text: "Site tal"
+          - text: "- Site tal"
             href: "#"
-          - text: "Site tal"
+          - text: "- Site tal"
             href: "#"
-          - text: "App tal"
+          - text: "- App tal"
             href: "#"
   page-footer:
     center: "© 2025 EcoHub"
