--- a/SITE/_quarto.yml
+++ b/SITE/_quarto.yml
@@ -7,10 +7,10 @@ project:
 
 website:
   title: "EcoHub"
-  site-url: "https://fernandovieira1.github.io/ambiental_bd_usp/"
+  site-url: "https://anicolella.github.io/EcoHub/"
   favicon: assets/favicon.svg
   search: true
-  repo-url: "https://github.com/fernandovieira1/ambiental_bd_usp"
+  repo-url: "https://github.com/anicolella/EcoHub"
   navbar:
     logo: assets/logo.svg
     left:
@@ -37,7 +37,7 @@ website:
         href: "javascript:void(0)"
         aria-label: "Toggle dark mode"
       - icon: github
-        href: "https://github.com/fernandovieira1/ambiental_bd_usp"
+        href: "https://github.com/anicolella/EcoHub"
         aria-label: "GitHub repository"
       - icon: envelope-at
         href: "mailto:contato@ecohub.com"
