subseção tracker construída + ajustes necessários nas abas gráficos e árvore

--- a/SITE/_quarto.yml
+++ b/SITE/_quarto.yml
@@ -23,7 +23,7 @@ website:
           - text: "Tracker"
             href: tracker.qmd
           - text: "Commits"
-            href: '#'
+            href: commits.qmd
           - text: "Wiki"
             href: '#'
       - text: Dados
