atualização deliberações (reunião 19012026) + alterações no texto de 'Sobre' + menu recusos adicionais + texto banner superior da página inicial

--- a/SITE/_quarto.yml
+++ b/SITE/_quarto.yml
@@ -41,32 +41,45 @@ website:
       - icon: envelope-at
         href: "mailto:contato@ecohub.com"
         aria-label: "Enviar e-mail"
-      - text: "🖇️"
+      - text: "Conteúdo adicional"
         menu:
-          - text: "📚 CURSOS"
+
+          - text: "🗄️ BASES DE DADOS"           
             href: "#"
-          - text: "- Curso A"
+          - text: "Our Word in Data"
+            href: "https://www.ourworldindata.org"
+            target: "_blank"
+          - text: "Brasil.gov"
+            href: "https://data.un.org"
+            target: "_blank"
+          - text: "OCDE"
+            href: "https://data.oecd.org"
+            target: "_blank"
+          - text: 'IBGE (Sidra)'
+            href: "https://sidra.ibge.gov.br"
+            target: "_blank"
+          - text: "IpeaData"
+            href: "https://www.ipeadata.gov.br"
+            target: "_blank"
+
+          - text: "📚 TREINAMENTOS"
             href: "#"
-          - text: "- Curso B"
+          - text: "Jurimetrics (Prof. Anicolella)"
+            href: "https://anicolella.github.io/jurimetria/"
+            target: "_blank"
+          - text: "Introdução ao GIT e GitHub (a fazer)"
             href: "#"
-          - text: "- Curso C"
+            target: "_blank"
+          - text: "Análise de dados com R (a fazer)"
             href: "#"
-          - text: "- Curso D"
+            target: "_blank"
+          - text: "Análise de dados com Python (a fazer)"
             href: "#"
-          - text: "💻 PACOTES"
+            target: "_blank"
+          - text: "Latex para trabalhos acadêmicos (a fazer)"
             href: "#"
-          - text: "- R"
-            href: "#"
-          - text: "- Python"
-            href: "#"
-          - text: "⚒️ UTILITÁRIOS"
-            href: "#"
-          - text: "- Site tal"
-            href: "#"
-          - text: "- Site tal"
-            href: "#"
-          - text: "- App tal"
-            href: "#"
+            target: "_blank"
+
   page-footer:
     center: "© 2025 EcoHub"
 
